--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,20 @@ body, html {
   color: #333;
   min-height: 100vh;
 }
+header img { 
+  height:56px; 
+  display:block; 
+  margin:auto; 
+}
+
+header .orn {
+  margin-top:12px;
+  max-width:100%;
+  height:auto;
+  display:block;
+  margin-left:auto;
+  margin-right:auto;
+}
 
 /* --- Логотипы в футере --- */
 .footer-logos img {
