--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ header {
 
 header .orn {
   margin-top: 12px;
-  max-width: 100vw; /* никогда не шире экрана */
+  max-width: 100%; /* никогда не шире экрана */
   height: auto;
   display: block;
   margin-left: auto;
