--- a/styles.css
+++ b/styles.css
@@ -11,15 +11,7 @@ header img {
   height:56px; 
   display:block; 
   margin:auto; 
-}
 
-header .orn {
-  margin-top:12px;
-  max-width:100%;
-  height:auto;
-  display:block;
-  margin-left:auto;
-  margin-right:auto;
 }
 header {
   text-align: center;
@@ -27,14 +19,14 @@ header {
   overflow: hidden; /* ограничиваем всё, что вылазит */
 }
 
-header .orn {
-  margin-top: 12px;
-  max-width: 100%; /* никогда не шире экрана */
-  height: auto;
+.orn {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 100%;
+  width: 100%;  /* растягиваем по ширине родителя */
+  height: auto; /* сохраняем пропорции */
+  margin: 12px auto;
 }
+
 
 
 /* --- Логотипы в футере --- */
